--- a/AIPI_Assignment_4.ipynb
+++ b/AIPI_Assignment_4.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/aiyufan3/AIPI-XAI-Interpretable-ML-II/blob/main/AIPI_Assignment_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "2XLzejHn2YUG"
       },
       "source": [
@@ -22,10 +12,10 @@
         "### Yufan Ai\n",
         "\n",
         "\n",
-        "#### https://colab.research.google.com/github/yourGHName/yourREPOName/blob/yourBranchName/yourFileName.ipynb\n",
+        "#### https://colab.research.google.com/github/aiyufan3/AIPI-XAI-Interpretable-ML-II/blob/main/AIPI_Assignment_4.ipynb\n",
         "\n",
         "\n",
-        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AIPI-590-XAI/Duke-AI-XAI/blob/dev/templates/template.ipynb)"
+        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/aiyufan3/AIPI-XAI-Interpretable-ML-II/blob/main/AIPI_Assignment_4.ipynb)"
       ]
     },
     {
@@ -1330,8 +1320,7 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
