Updated using Colab

--- a/AIPI_Assignment_4.ipynb
+++ b/AIPI_Assignment_4.ipynb
@@ -142,8 +142,6 @@
         "# Check for missing values after processing\n",
         "print(data.isnull().sum())\n",
         "\n",
-        "# Feature Engineering: Target and Features\n",
-        "# The 'Ladder score' is the target (Happiness Score equivalent)\n",
         "# Discretize the 'Ladder score' into categories (multi-class labels) for classification\n",
         "data['Happiness_Category'] = pd.cut(data['Ladder score'], bins=[0, 4, 6, 10], labels=[0, 1, 2])\n",
         "\n",
@@ -971,9 +969,7 @@
         "plt.bar(accuracies.keys(), accuracies.values(), color=['blue', 'green', 'purple'])\n",
         "plt.title('Comparison of Model Accuracies')\n",
         "plt.ylabel('Accuracy')\n",
-        "plt.show()\n",
-        "\n",
-        "# You can also visualize other metrics (Precision, Recall, F1-score) similarly.\n"
+        "plt.show()\n"
       ],
       "metadata": {
         "colab": {
@@ -1134,7 +1130,7 @@
         "# Train-test split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
-        "# Preprocessing pipeline (standardization for numeric and one-hot encoding for categorical)\n",
+        "# Preprocessing pipeline\n",
         "numeric_features = X.select_dtypes(include=['float64', 'int64']).columns\n",
         "categorical_features = X.select_dtypes(include=['object']).columns\n",
         "\n",
@@ -1178,7 +1174,6 @@
         "\n",
         "y_pred_greedy = greedy_tree.predict(X_test)\n",
         "\n",
-        "# Evaluation\n",
         "print(\"GreedyTreeClassifier Testing Accuracy: \", accuracy_score(y_test, y_pred_greedy))\n",
         "print(classification_report(y_test, y_pred_greedy))\n",
         "\n",
