Updated using Colab

--- a/AIPI_Assignment_4.ipynb
+++ b/AIPI_Assignment_4.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# AIPI 590 - XAI | Assignment #04\n",
         "### Description\n",
-        "The objective of this project is to analyze and classify data from the World Happiness Report 2023 using interpretable machine learning models. Three rule-based and tree-based models from the imodels library are implemented: SkopeRulesClassifier, BoostedRulesClassifier, and GreedyTreeClassifier. These classifiers are applied to predict the level of happiness of countries based on various socio-economic and health indicators. Interpretable models are preferred due to their transparency, which allows for understanding the decision-making process. This is especially critical in fields like policy-making, where explainability is essential.\n",
+        "The objective of this project is to analyze and classify data from the World Happiness Report 2023 using interpretable machine learning models. Three rule-based and tree-based models from the imodels library are implemented: SkopeRulesClassifier, BoostedRulesClassifier, and GreedyTreeClassifier. These classifiers are applied to predict the level of happiness of countries based on various socio-economic and health indicators. Interpretable models are preferred due to their transparency, which allows for understanding the decision-making process.\n",
         "### Yufan Ai\n",
         "\n",
         "\n",
@@ -57,9 +57,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CoBXI0iq8yBH",
-        "outputId": "3f4d0b46-8e85-4e66-ec03-a34a62dd6d5f"
+        "outputId": "e1470d7a-e481-4e3b-fcbe-62af44136b1d"
       },
-      "execution_count": 10,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "data = pd.read_csv('/content/WHR2023.csv')\n",
         "\n",
         "# Display basic information\n",
-        "print(data.info())  # This helps identify which columns are numeric and which are categorical\n",
+        "print(data.info())\n",
         "\n",
         "# Data Cleaning: Handle missing values\n",
         "# Apply fillna() only to numeric columns\n",
@@ -137,7 +137,7 @@
         "data[numeric_columns] = data[numeric_columns].fillna(data[numeric_columns].mean())\n",
         "\n",
         "# Drop irrelevant columns like 'Country_Name' or 'Region', if not needed for the model\n",
-        "data = data.drop(columns=['Country name'], axis=1, errors='ignore')  # Ignore errors if columns don't exist\n",
+        "data = data.drop(columns=['Country name'], axis=1, errors='ignore')\n",
         "\n",
         "# Check for missing values after processing\n",
         "print(data.isnull().sum())\n",
@@ -145,11 +145,11 @@
         "# Discretize the 'Ladder score' into categories (multi-class labels) for classification\n",
         "data['Happiness_Category'] = pd.cut(data['Ladder score'], bins=[0, 4, 6, 10], labels=[0, 1, 2])\n",
         "\n",
-        "# Drop the original 'Ladder score' as it's now represented in categories\n",
+        "# Drop the original 'Ladder score'\n",
         "X = data.drop(columns=['Ladder score', 'Happiness_Category'], axis=1)\n",
         "y = data['Happiness_Category']\n",
         "\n",
-        "# Split data into training and testing sets\n",
+        "# Split data\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
         "# Preprocessing: Scaling and Encoding\n",
@@ -175,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hmR7Xa8f86wP",
-        "outputId": "ae912971-0892-45c6-9050-fc3ce8fbc56c"
+        "outputId": "4b188568-bea0-4732-f55e-e45ef2c75894"
       },
-      "execution_count": 21,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,9 +315,9 @@
           "height": 847
         },
         "id": "Qt4nmvSE-bBz",
-        "outputId": "b7302891-6653-4df9-9c50-93075f729af6"
+        "outputId": "023fbbc5-0411-48a1-9d8f-eadb05eecdcb"
       },
-      "execution_count": 27,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,9 +414,9 @@
           "height": 664
         },
         "id": "KkfBQDQkILmk",
-        "outputId": "64249dce-e5cd-4308-85f4-7ef217a42837"
+        "outputId": "ebd5c983-e564-443f-a7de-239b921a4213"
       },
-      "execution_count": 68,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,9 +424,9 @@
           "text": [
             "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
             "  and should_run_async(code)\n",
-            "<ipython-input-68-ed6c52d12be6>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-75-ed6c52d12be6>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax[2].set_xticklabels(features, rotation=45, ha='right')\n",
-            "<ipython-input-68-ed6c52d12be6>:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-75-ed6c52d12be6>:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax[3].set_xticklabels(features, rotation=45, ha='right')\n"
           ]
         },
@@ -531,9 +531,9 @@
           "height": 740
         },
         "id": "KTSg91xdKKCh",
-        "outputId": "e31d3a56-03c9-4659-8f9e-cce26fc0f269"
+        "outputId": "ec50fea6-8c11-4c9e-e285-c897204aa73e"
       },
-      "execution_count": 32,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,9 +626,9 @@
           "height": 665
         },
         "id": "AjKofnK-KaPy",
-        "outputId": "11406a5d-a212-4f76-ebe9-9f264ff7cbb8"
+        "outputId": "6bfed7f6-897e-477d-9e2a-ddefabc827fb"
       },
-      "execution_count": 66,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,9 +636,9 @@
           "text": [
             "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
             "  and should_run_async(code)\n",
-            "<ipython-input-66-eced4f148352>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-77-eced4f148352>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax[2].set_xticklabels(features, rotation=45, ha='right')  # Rotate x-axis for better readability\n",
-            "<ipython-input-66-eced4f148352>:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-77-eced4f148352>:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax[3].set_xticklabels(features, rotation=45, ha='right')\n"
           ]
         },
@@ -742,9 +742,9 @@
           "height": 704
         },
         "id": "9Zk816BgKz2p",
-        "outputId": "0192580d-f5ed-44c4-a4e8-face0d7e6abd"
+        "outputId": "55acc3c5-deba-48f7-dacf-0440cb5da887"
       },
-      "execution_count": 34,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +832,7 @@
         "\n",
         "# Select the feature with the smallest total error\n",
         "ax[3].bar(features, errors, color='purple', alpha=0.7)\n",
-        "ax[3].bar('Healthy life expectancy', 5, color='red', alpha=0.7)  # Highlight the selected feature\n",
+        "ax[3].bar('Healthy life expectancy', 5, color='red', alpha=0.7)\n",
         "ax[3].set_title('Selected Feature of Healthy Life Expectancy')\n",
         "ax[3].set_xticklabels(features, rotation=45, ha='right')\n",
         "\n",
@@ -845,9 +845,9 @@
           "height": 667
         },
         "id": "rP7pBB4YK4yA",
-        "outputId": "b7bc04b7-41e8-4bdd-cc82-2a864ae236be"
+        "outputId": "ae6a05fb-924e-4168-9786-f481aaa0828b"
       },
-      "execution_count": 67,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -855,9 +855,9 @@
           "text": [
             "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
             "  and should_run_async(code)\n",
-            "<ipython-input-67-4328d2c18303>:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-79-6b634b21efc0>:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax[2].set_xticklabels(features, rotation=45, ha='right')  # Rotate x-axis for better readability\n",
-            "<ipython-input-67-4328d2c18303>:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-79-6b634b21efc0>:23: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax[3].set_xticklabels(features, rotation=45, ha='right')\n"
           ]
         },
@@ -977,9 +977,9 @@
           "height": 958
         },
         "id": "2o50HGE4LgpV",
-        "outputId": "6c16e1a0-b992-4a3e-8856-4c9cb76d0b0c"
+        "outputId": "9e9b225d-96bd-4259-a0e0-c9c863372474"
       },
-      "execution_count": 44,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,9 +1073,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jvrCih0jNPY5",
-        "outputId": "1ae0f90c-063f-4c67-ef69-453a6f2b6b8f"
+        "outputId": "91e7f48f-94c9-4911-c6ba-362f730d5868"
       },
-      "execution_count": 48,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -1185,9 +1185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZkmsNe3EO5uW",
-        "outputId": "ad99cfd8-042f-4717-a6aa-63eaf353bf5e"
+        "outputId": "3c174ec3-3a1b-4627-ef9f-8ef710ba74e3"
       },
-      "execution_count": 61,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -1236,7 +1236,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "BoostedRulesClassifier Cross-Validation Accuracy:  0.968421052631579\n",
+            "BoostedRulesClassifier Cross-Validation Accuracy:  0.9789473684210526\n",
             "GreedyTreeClassifier Testing Accuracy:  0.9761904761904762\n",
             "              precision    recall  f1-score   support\n",
             "\n",
@@ -1248,7 +1248,7 @@
             "   macro avg       0.92      0.98      0.94        42\n",
             "weighted avg       0.98      0.98      0.98        42\n",
             "\n",
-            "GreedyTreeClassifier Cross-Validation Accuracy:  0.9789473684210526\n"
+            "GreedyTreeClassifier Cross-Validation Accuracy:  0.968421052631579\n"
           ]
         }
       ]
@@ -1256,7 +1256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After reducing overfitting, both BoostedRulesClassifier and GreedyTreeClassifier achieved high testing accuracy of approximately 97.6%, with cross-validation scores close to the testing results, indicating strong generalization. The precision, recall, and F1-scores also demonstrate robust performance across all classes, with particularly high results for the majority classes. The minimal gap between training and testing accuracies suggests that the models are not overfitting and generalize well to unseen data."
+        "After reducing overfitting, both **BoostedRulesClassifier** and **GreedyTreeClassifier** achieved high testing accuracy of approximately 97.6%, with **cross-validation** scores close to the testing results, indicating strong generalization. The **precision**, **recall**, and **F1-scores** also demonstrate robust performance across all classes, with particularly high results for the majority classes. The minimal gap between **training** and **testing** accuracies suggests that the models are not overfitting and generalize well to unseen data."
       ],
       "metadata": {
         "id": "3MPnnTNQRKJz"
